--- a/public/app.css
+++ b/public/app.css
@@ -55,17 +55,26 @@ body > h1{
     border-radius: 5px;
     color:white;
     box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
     text-align: center;
     width: 400px;
     margin: 20px auto;
   }
-  
+  .summoner{
+    width:25%;
+    margin: 0 auto;
+  }
+  .summoner h2{
+    font-size:16px;
+    display:inline-flex;
+    vertical-align: top;
+    width:100px;
+  }
   .profile-icon {
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    margin-bottom: 10px;
+    
   }
   
   .summoner-name {
@@ -75,9 +84,15 @@ body > h1{
   
   .summoner-level {
     font-size: 16px;
-    margin-bottom: 20px;
+    margin-top: -20px;
+    margin-right:-3px;
+    text-align: right;
   }
-  
+  .summoner-level span{
+    background-color: rgb(32, 45, 55);
+    border-radius: 10px;
+    padding: 0 8px;
+  }
   .rank-info {
     display: flex;
     justify-content: center;
@@ -310,3 +325,4 @@ body > h1{
     font-size:10px;
   }
 }
+
