--- a/public/app.css
+++ b/public/app.css
@@ -57,18 +57,16 @@ body > h1{
     box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
     padding: 10px 20px 10px 20px;
     text-align: center;
-    width: 400px;
+    width: 450px;
     margin: 20px auto;
   }
   .summoner{
     width:25%;
     margin: 0 auto;
   }
-  .summoner h2{
+  .summoner-card h2{
     font-size:16px;
-    display:inline-flex;
-    vertical-align: top;
-    width:100px;
+    margin-top:5px;
   }
   .profile-icon {
     width: 80px;
@@ -77,15 +75,10 @@ body > h1{
     
   }
   
-  .summoner-name {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
   .summoner-level {
     font-size: 16px;
     margin-top: -20px;
-    margin-right:-3px;
+    margin-right:10px;
     text-align: right;
   }
   .summoner-level span{
@@ -93,13 +86,41 @@ body > h1{
     border-radius: 10px;
     padding: 0 8px;
   }
-  .rank-info {
+  .rank-info-row {
+    width:100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+    border:2px solid #333;
+    border-radius: 5px;
   }
-  
+  .rank-info-col{
+    flex-grow:1;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .rank-info-col:first-child{
+    border-right:1px solid #333;
+  }
+  .rank-info-col:nth-child(2){
+    border-left:1px solid #333;
+  }
+  .ranked-details{
+    display:flex;
+    flex-direction: column;
+    flex:1;
+    
+  }
+  .rank-icon {
+    width: 60px;
+    height: 60px;
+    flex:1;
+    background-color: #333;
+    border-radius: 50%;
+    margin-left: 2px;
+  }
   .rank-img {
     width: 50px;
     height: 50px;
@@ -122,6 +143,10 @@ body > h1{
 
   .queue-type{
     font-size:14px;
+    border:1px solid #31313C;
+    background-color: #333;
+    border-bottom-left-radius: 5px;
+    margin-bottom: 3px;
   }
   .matches-container{
     width:90%;
