--- a/public/app.css
+++ b/public/app.css
@@ -293,6 +293,7 @@ body > h1{
   }
   .summoner-line-ups ul{
     list-style-type: none;
+    padding:0;
   }
   .summoner-line-ups ul li{
     display:flex;
@@ -345,12 +346,31 @@ body > h1{
   content:"/ ";
  }
 
+.itemimg{
+  height:22px;
+  width:22px;
+  border-radius: 4px;
+}
+.itemlist > ul {
+  list-style-type: none;
+  display:flex;
+  padding:0;
+  position: relative;
+  top:7px;
+}
+.item{
+  padding:1px;
+}
 @media(width < 1100px){
-  .kills,
-  .deaths,
-  .assists,
-  .kda {
-    font-size:10px;
+  .summoner-line-ups > ul {
+    display:none;
+  }
+
+  .kda, .deaths,.assists,.kills{
+    font-size:15px;
+  }
+
+  .score{
+    width:30%;
   }
 }
-
